--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ src/besside-ng-crawler
 src/ivstools
 src/kstats
 src/wpaclean
+src/dragondrain
+src/dragontime
 src/osdep/.os.Linux
 src/osdep/libosdep.a
 src/tags
